Fix Bug 79807
Long title is not truncated

--- a/packages/client/src/pages/PortalSettings/categories/common/DefaultTemplates/DefaultTemplates.module.scss
+++ b/packages/client/src/pages/PortalSettings/categories/common/DefaultTemplates/DefaultTemplates.module.scss
@@ -47,6 +47,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  gap: 12px;
   border-bottom: 1px solid var(--default-templates-border-color);
 
   &:last-child {
@@ -57,32 +58,33 @@
 .rowContent {
   display: flex;
   flex-direction: row;
-  flex: 1;
   align-items: center;
   padding: 12px 0;
+  flex: 1; 
+  min-width: 0;
+  gap: 12px;
+
 }
 
 .mainContent {
   display: flex;
   flex-direction: column;
-
-  @include mixins.mobile {
-    max-width: 120px;
-  }
+  flex: 1;
+  min-width: 0;
 }
 
 .icon {
   width: 32px;
   height: 32px;
-  margin-inline-end: 12px;
 }
 
 .badge {
   margin-inline-start: auto;
-  margin-inline-end: 24px;
+  flex-shrink: 0;
 }
 
 .contextMenuButton {
+  flex-shrink: 0;
   margin-inline-start: auto;
 }
 
